--- a/public/css/navbarFooter.css
+++ b/public/css/navbarFooter.css
@@ -78,7 +78,7 @@ input[type=text]:focus {
 }
 
 .thumbnail {
-    padding: 0 0 15px 0;
+    padding: 0 0 0 0;
     border: none;
     border-radius: 0;
 }
